test/langtools/tools/javac/SuperInit/EarlyInnerAccessErrorMessageTest.out
EarlyInnerAccessErrorMessageTest.java:13:34: compiler.err.cant.ref.before.ctor.called: x
1 error
